# play-with-grpc

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/services/: client.py  server.py  sum.proto  sum_pb2.py  sum_pb2_grpc.py
